--- a/stylewoodwork.css
+++ b/stylewoodwork.css
@@ -248,6 +248,9 @@ hr.light-100 {
   html, body {
     overflow-x: hidden;
 }
+  .header-text {
+  font-size: 40%;
+}
   .carousel-under {
   font-size: 200%;
 }
@@ -272,7 +275,7 @@ hr.light-100 {
     display: none;
   }
   .display-4 {
-  font-size: 250%;
+  font-size: 150%;
 }
 .social a {
   font-size: 2em;
